# hm

./: .gitignore  CMakeLists.txt  Design.txt  README.md  book.cpp  cgi.cpp  client.cpp  common.cpp  common.hpp  gc.cpp  global.cpp  hm.hpp  hmrunner.hpp  hotelmgr.kdev4  http.cpp  httpd.cpp  httpfile.cpp  init.cpp  keyvalfile.hpp  main.cpp  pch.cmake  pch.hpp  roomid.cpp  shell.cpp  status.cpp  sub.hpp  templates.hpp
lib/: common.cpp  common.hpp  escape_string.cpp  escape_string.h  hmrunner.hpp  keyvalfile.hpp  opt.cpp  opt.hpp  sigaction.cpp  sigaction.hpp  templates.hpp
